# noice

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: image.rs
src/: lib.rs  main.rs  perlin_maker.rs  rand.rs  white_maker.rs  worley_maker.rs
src/noise_gen/: mod.rs  perlin.rs  white.rs
src/noisifier/: mod.rs  perlin.rs  white.rs
src/rand/: mod.rs
