[package]
name = "noice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image"]
image = ["dep:png"]

[dependencies]
min_max_traits = "0.1.0"
num-traits = "0.2.18"
png = { version = "*", optional = true }
